--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ googleAnalytics = "UA-78712173-1"
 
 	# Repository
 	provider = "GitHub"
-	repo_url = "https://github.com/Moxie-Lang/moxie-lang"
+	repo_url = "https://github.com/Moxie-Lang/moxie"
 
 	version = "0.0.1"
 	logo = "images/logo.png"
